--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,13 @@ services:
   jguweka:
     image: aymmenn/jguweka:OAS3
     restart: always
+     environment:
+      CATALINA_OPTS: '-agentpath:/usr/local/jprofiler11.0/bin/linux-x64/libjprofilerti.so=port=8849'
     links:
       - "mongo"
     ports:
       - "8080-8085:8080"
+      - "8849:8849"
     depends_on:
       - mongo
     labels:
