--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,8 @@ services:
   jguweka:
     image: aymmenn/jguweka:OAS3
     restart: always
-    environment: 
-     CATALINA_OPTS: '-agentpath:/usr/local/jprofiler11.0/bin/linux-x64/libjprofilerti.so=port=8849,nowait'
     links:
-      - "mongo"
+      - "mongo:mongodb"
     expose:
       - "8080"
       - "8849"
